# Port-Scanner

./: .gitignore  LICENSE  README.md  port_scanner_docs.md  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements-tls.txt  requirements.txt  scan.toml.example
.github/workflows/: test.yml
Schema/: README.md  audit-record.schema.json  authorization-summary.schema.json  banner-probe-output.schema.json  benchmark-output.schema.json  common-defs.schema.json  config-file.schema.json  config-output.schema.json  discovery-output.schema.json  doctor-report.schema.json  http-probe-output.schema.json  http-probe-result.schema.json  port-result.schema.json  scan-report.schema.json  schema-index.json  tls-probe-output.schema.json  tls-probe-result.schema.json
Schema/examples/: audit-record.example.json  benchmark-output.example.json  config-file.example.json  discovery-output.example.json  doctor-report.example.json  http-probe-output.example.json  scan-report.example.json  tls-probe-output.example.json
docs/: benchmark-example.txt  demo-script.md  packet-capture-notes.md  platform-notes.md  protocol-mastery-checklist.md  rubric.md
docs/adr/: 0001-authorization-gate.md  0002-connect-vs-syn-scan.md  0003-raw-socket-vs-packet-library.md  0004-sync-threaded-async.md  0005-wsgi-lab-vs-django-dashboard.md  0006-platform-capability-gating.md  0007-async-concurrency-rate-limiting.md
docs/evidence/: scan-report-example.json
src/portsleuth/: __init__.py  __main__.py  capabilities.py  config.py  exceptions.py  models.py
tests/: conftest.py  test_port_parser_edges.py
tests/integration/: test_cli.py  test_commands_extended.py  test_discover.py  test_main_extended.py  test_round2.py  test_scan_fixture.py  test_wsgi_probe.py
tests/privileged/: test_raw_socket_capability.py
tests/unit/: test__main__.py  test_audit.py  test_audit_extended.py  test_authorization.py  test_authorize_full.py  test_banner_http_probe.py  test_benchmark.py  test_cancellation.py  test_capabilities.py  test_capabilities_full.py  test_classification.py  test_classify_extended.py  test_classify_refused.py  test_config.py  test_config_extended.py  test_connect_extended.py  test_coverage_max.py  test_exceptions.py  test_fd_limit.py  test_http_parse.py  test_http_probe_wsgi.py  test_models.py  test_output_formats.py  test_output_shape.py  test_packet_demo_cli.py  test_packets.py  test_parse_extended.py  test_ports.py  test_rate_burst.py  (+15 more)
(+39 files in other folders)
